libs/modkit-macros-tests/tests/ui/fail/expand_vars_unsupported_type.rs
use modkit_macros::ExpandVars;

#[derive(ExpandVars)]
struct Cfg {
    #[expand_vars]
    retries: u32,
}

fn main() {}
